# chatbot

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MPC_INSPECTOR.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/mcp/: SKILL.md
.claude/skills/mcp/references/: arquitectura.md  best-practices.md  cliente-y-host.md
.github/workflows/: ci.yml
knowledge/: normativas_empleados.md
postman/: Chatbot Hub.postman_collection.json
src/chatbot/: app.py  config.py  database.py  logging_config.py  main.py  mcp_client.py  mcp_host.py  mcp_server.py  memory.py  routes.py
src/chatbot/rag/: chunking.py  embeddings.py  ingest.py  store.py
src/chatbot/services/: discord_service.py  whatsapp.py
src/chatbot/tools/: db_tools.py  discord_tools.py  rag_tools.py
tests/: conftest.py  test_config.py  test_db_tools.py  test_logging_config.py  test_mcp_client.py  test_mcp_host.py  test_memory.py  test_rag_chunking.py  test_rag_embeddings.py  test_rag_ingest.py  test_rag_store.py  test_routes_webhook.py  test_webhook_signature.py  test_whatsapp_service.py
