[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Torres",email = "mtri21019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "uvicorn>=0.42.0,<0.43.0",
    "mcp[cli]>=1.26.0,<2.0.0",
    "sqlalchemy>=2.0.48,<3.0.0",
    "aiomysql>=0.3.2,<0.4.0",
    "pydantic-settings>=2.13.1",
    "openai>=2.30.0",
    "anthropic>=0.86.0",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[project.scripts]
start = "chatbot.main:start"
test = "chatbot.main:test"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["chatbot"]
omit = ["*/tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
